Use ArrayDeque